# RAG_obsidian

./: .gitignore  README.md  app.py  dev.ipynb  main.py  pyproject.toml  run_app.py
src/: config.py  embedding.py  file_handler.py  rag_system.py
